SERVER-31435 Ensure applyOps with createIndexes replicates